--- a/thesis.bib
+++ b/thesis.bib
@@ -55,13 +55,11 @@
 	Title = {Evapotranspiration from {Douglas} fir stands exposed to soil water deficits},
 	Year = {1979}}
 
-
 @book{bonan,
 	Author={Bonan, G. B.},
 	Title={Ecological climatology: concepts and applications},
 	Publisher={Cambridge University Press},
 	Year={2002}}
-
 
 @article{bond1999stomatal,
 	Author = {Bond, Barbara J and Kavanagh, Kathleen L},
@@ -73,8 +71,7 @@
 	Volume = {19},
 	Year = {1999}}
 
-
-@article{Brooks:2006vn},
+@article{brooks2006,
 	Author = {Brooks, JR and Meinzer, FC and Warren, JM and Domec, JC and Coulombe, R},
 	Journal = {Plant Cell and Environment},
 	Number = {1},
@@ -84,14 +81,12 @@
 	Volume = {29},
 	Year = {2006}}
 
-
 @article{buckley2011nocturnal,
 	Author = {Buckley, T.N. and Turnbull, T.L. and Pfautsch, S. and Adams, M.A.},
 	Journal = {Ecology and Evolution},
 	Publisher = {Wiley Online Library},
 	Title = {Nocturnal water loss in mature subalpine \textit{Eucalyptus delegatensis} tall open forests and adjacent \textit{E. pauciflora} woodlands},
 	Year = {2011}}
-
 
 @article{burgess2001improved,
 	Author = {Burgess, S.S.O. and Adams, M.A. and Turner, N.C. and Beverly, C.R. and Ong, C.K. and Khan, A.A.H. and Bleby, T.M.},
@@ -103,7 +98,6 @@
 	Volume = {21},
 	Year = {2001}}
 
-
 @article{vcermak1992radial,
 	Author = {{\v{C}}erm{\'a}k, J. and Cienciala, E. and Ku{\v{c}}era, J. and H{\"a}llgren, J.E.},
 	Journal = {Tree Physiology},
@@ -114,7 +108,6 @@
 	Volume = {10},
 	Year = {1992}}
 
-
 @article{chen2008observations,
 	Author = {Chen, Xingyuan and Rubin, Yoram and Ma, Siyan and Baldocchi, Dennis},
 	Journal = {Water Resources Research},
@@ -123,7 +116,6 @@
 	Title = {Observations and stochastic modeling of soil moisture control on evapotranspiration in a {Californian} oak savanna},
 	Volume = {44},
 	Year = {2008}}
-
 
 @article{chirino2011daily,
 	Author = {Chirino, Esteban and Bellot, Juan and S{\'a}nchez, Juan R},
@@ -135,16 +127,14 @@
 	Volume = {25},
 	Year = {2011}}
 
-
 @article{choat2012global,
-	Author = {Choat, B., S. Jansen, T.~J. Bodribb, H. Cochard, S. Delzon, R. Bhaskar, S. Bucci, T.~S. Feild, S.~M. Gleason, U.~G. Hacke, A.~L. Jacobsen, F. Lens, H. Maherali, J. Mart\'{i}nez-Vilalta, S. Mayr, M. Mencuccini, P.~J. Mitchell, A. Nardini, J. Pittermann, R.~B. Pratt, J.~S. Sperry, M. Westoby, I.~J. Wright, and A.~E. Zanne},
+	Author = {Choat, B., S. and Jansen, S. and Bodribb, T.~J. and Cochard, H. and Delzon, S. and Bhaskar, R. and Bucci, S. and Feild, T.~S. and Gleason, S.~M. and Hacke, U.~G. and Jacobsen, A.~L. and Lens, F. and Maherali, H. and Mart\'{i}nez-Vilalta, J. and Mayr, S. and Mencuccini, M. and Mitchell, P.~J. and Nardini, A. and Pittermann, J. and Pratt, R.~B. and Sperry, J.~S. and Westoby, M. and Wright, I.~J. and Zanne, A.~E.},
 	Journal = {Nature},
 	Publisher = {Nature Publishing Group},
 	Volume = {491},
 	Pages = {752--756},
 	Title = {Global convergence in the vulnerability of forests to drought},
 	Year = {2012}}
-
 
 @article{cohen1985determination,
 	Author = {Cohen, Y. and Kelliher, FM and Black, TA},
@@ -156,16 +146,14 @@
 	Volume = {15},
 	Year = {1985}}
 
-
 @article{constanz,
-	Author={Constantz, J., and Murphy, F.},
+	Author={Constantz, J. and Murphy, F.},
 	Journal={Journal of Hydrology},
 	Volume={119},
 	Number={1},
 	Title={Monitoring moisture storage in trees using time domain reflectometry},
 	Pages={31--42},
 	Year={1990}}
-
 
 @article{dang1997regulation,
 	Author = {Dang, Q.L. and Margolis, H.A. and Coyea, M.R. and Sy, M. and Collatz, G.J.},
@@ -177,7 +165,6 @@
 	Volume = {17},
 	Year = {1997}}
 
-
 @article{david2007water,
 	Author = {David, Teresa Soares and Henriques, MO and Kurz-Besson, C and Nunes, J and Valente, F and Vaz, M and Pereira, JS and Siegwolf, R and Chaves, MM and Gazarini, LC and others},
 	Journal = {Tree Physiology},
@@ -187,7 +174,6 @@
 	Title = {Water-use strategies in two co-occurring {Mediterranean} evergreen oaks: surviving the summer drought},
 	Volume = {27},
 	Year = {2007}}
-
 
 @article{dragoni2009decoupling,
 	Author = {Dragoni, D and Caylor, KK and Schmid, HP},
@@ -199,13 +185,11 @@
 	Volume = {149},
 	Year = {2009}}
 
-
 @book{eamus,
 	Author={Eamus, D. and Hatton, T and Cook, P and Colvin, C},
 	Title={Ecohydrology: Vegetation Function, Water and Resource Mangement},
 	Publisher={CSIRO Publishing},
 	Year={2006}}
-
 
 @book{feddes,
 	Author={Feddes, R. and Kowalik, P. and Zaradny, H.},
@@ -213,6 +197,15 @@
 	Publisher={John Wiley, New York},
 	Year={1978}}
 
+@article{fisher2007towers,
+	Author = {Fisher, J.B. and Baldocchi, D.D. and Misson, L. and Dawson, T.E. and Goldstein, A.H.},
+	Journal = {Tree Physiology},
+	Number = {4},
+	Pages = {597},
+	Publisher = {Oxford University Press},
+	Title = {What the towers don't see at night: nocturnal sap flow in trees and shrubs at two AmeriFlux sites in California},
+	Volume = {27},
+	Year = {2007}}
 
 @article{ford2004assessing,
 	Author = {Ford, C.R. and McGuire, M.A. and Mitchell, R.J. and Teskey, R.O.},
@@ -224,7 +217,6 @@
 	Volume = {24},
 	Year = {2004}}
 
-
 @article{franks2007anisohydric,
 	Author = {Franks, Peter J and Drake, Paul L and Froend, Ray H},
 	Journal = {Plant, Cell \& Environment},
@@ -235,9 +227,8 @@
 	Volume = {30},
 	Year = {2007}}
 
-\bibitem[{GLOBE}]{GLOBE}
-GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M. Bootz, H. Murakami, H. Maruyama, H. Masaharu, P. Holland, J. Payne, N.~A. Bryant, T.~L. Logan, J.-P. Muller, G. Schreier, and J.~S. MacDonald), eds. (1999), The Global Land One-kilometer Base Elevation (GLOBE) Digital Elevation Model, Version 1.0. National Oceanic and Atmospheric Administration, National Geophysical Data Center, 325 Broadway, Boulder, Colorado 80303, U.S.A. Digital data base on the World Wide Web (URL: http://www.ngdc.noaa.gov/mgg/topo/globe.html) and CD-ROMs.
-
+%\bibitem[{GLOBE}]{GLOBE}
+%GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M. Bootz, H. Murakami, H. Maruyama, H. Masaharu, P. Holland, J. Payne, N.~A. Bryant, T.~L. Logan, J.-P. Muller, G. Schreier, and J.~S. MacDonald), eds. (1999), The Global Land One-kilometer Base Elevation (GLOBE) Digital Elevation Model, Version 1.0. National Oceanic and Atmospheric Administration, National Geophysical Data Center, 325 Broadway, Boulder, Colorado 80303, U.S.A. Digital data base on the World Wide Web (URL: http://www.ngdc.noaa.gov/mgg/topo/globe.html) and CD-ROMs.
 
 @article{granier1987evaluation,
 	Author = {Granier, A.},
@@ -249,7 +240,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Volume = {3},
 	Year = {1987}}
 
-
 @article{humphreys2003annual,
 	Author = {Humphreys, ER and Black, TA and Ethier, GJ and Drewitt, GB and Spittlehouse, DL and Jork, E.M. and Nesic, Z. and Livingston, NJ},
 	Journal = {Agricultural and Forest Meteorology},
@@ -259,7 +249,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Title = {Annual and seasonal variability of sensible and latent heat fluxes above a coastal {Douglas-fir forest, British Columbia, Canada}},
 	Volume = {115},
 	Year = {2003}}
-
 
 @article{jarvis1976interpretation,
 	Author = {Jarvis, PG},
@@ -271,7 +260,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Volume = {273},
 	Year = {1976}}
 
-
 @article{jassal2009evapotranspiration,
 	Author = {Jassal, R.S. and Black, T.A. and Spittlehouse, D.L. and Br{\"u}mmer, C. and Nesic, Z.},
 	Journal = {Agricultural and Forest Meteorology},
@@ -282,13 +270,11 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Volume = {149},
 	Year = {2009}}
 
-
 @mastersthesis{johnsonACRR,
 	Author = {Johnson, Sharon Grace},
 	School = {San Francisco State University},
 	Title = {The land-use history of the coast range preserve, {Mendocino County, California}},
 	Year = {1979}}
-
 
 @article{jung2010recent,
 	Author = {Jung, M. and Reichstein, M. and Ciais, P. and Seneviratne, S.I. and Sheffield, J. and Goulden, M.L. and Bonan, G. and Cescatti, A. and Chen, J. and De Jeu, R. and others},
@@ -300,7 +286,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Volume = {467},
 	Year = {2010}}
 
-
 @article{kumagai2012strategies,
 	Author = {Kumagai, Tomo'omi and Porporato, Amilcare},
 	Journal = {Plant, Cell \& Environment},
@@ -310,7 +295,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Title = {Strategies of a {Bornean} tropical rainforest water use as a function of rainfall regime: isohydric or anisohydric?},
 	Volume = {35},
 	Year = {2012}}
-
 
 @article{lindroth1986numerical,
 	Author = {Lindroth, A. and Halldin, S.},
@@ -322,7 +306,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Volume = {38},
 	Year = {1986}}
 
-
 @article{lohammar1980fast,
 	Author = {Lohammar, T. and Larsson, S. and Linder, S. and Falk, SO},
 	Journal = {Ecological Bulletins},
@@ -331,13 +314,11 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Title = {{FAST}: Simulation models of gaseous exchange in {Scots} pine},
 	Year = {1980}}
 
-
-@article{lorenz1956empirical,
+@techreport{lorenz1956empirical,
 	Author = {Lorenz, E.N. and Air Force Cambridge Research Center (US) Geophysics Research Directorate},
-	Publisher = {Massachusetts Institute of Technology, Dept. of Meteorology},
+	Institution = {Massachusetts Institute of Technology, Dept. of Meteorology},
 	Title = {Empirical orthogonal functions and statistical weather prediction},
 	Year = {1956}}
-
 
 @article{marshall1984conifers,
 	Author = {Marshall, JD and Waring, RH},
@@ -349,7 +330,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Volume = {14},
 	Year = {1984}}
 
-
 @article{martinez2003sap,
 	Author = {Mart{\'\i}nez-Vilalta, Jordi and Mangir{\'o}n, Marta and Ogaya, Rom{\`a} and Sauret, Miquel and Serrano, Lydia and Pe{\~n}uelas, Josep and Pi{\~n}ol, Josep},
 	Journal = {Tree Physiology},
@@ -359,7 +339,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Title = {Sap flow of three co-occurring {Mediterranean} woody species under varying atmospheric and soil water conditions},
 	Volume = {23},
 	Year = {2003}}
-
 
 @article{martinez2004hydraulic,
 	Author = {Mart{\'\i}nez-Vilalta, Jordi and Sala, Anna and Pi{\~n}ol, Josep},
@@ -371,7 +350,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Volume = {171},
 	Year = {2004}}
 
-
 @article{mcdowell2008mechanisms,
 	Author = {McDowell, N. and Pockman, W.T. and Allen, C.D. and Breshears, D.D. and Cobb, N. and Kolb, T. and Plaut, J. and Sperry, J. and West, A. and Williams, D.G. and others},
 	Journal = {New Phytologist},
@@ -381,7 +359,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Title = {Mechanisms of plant survival and mortality during drought: why do some plants survive while others succumb to drought?},
 	Volume = {178},
 	Year = {2008}}
-
 
 @article{moore2004structural,
 	Author = {Moore, G.W. and Bond, B.J. and Jones, J.A. and Phillips, N. and Meinzer, F.C.},
@@ -393,7 +370,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Volume = {24},
 	Year = {2004}}
 
-
 @article{morrow1974drought,
 	Author = {Morrow, PA and Mooney, H.A.},
 	Journal = {Oecologia},
@@ -403,7 +379,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Title = {Drought adaptations in two {Californian} evergreen sclerophylls},
 	Volume = {15},
 	Year = {1974}}
-
 
 @article{mu2007development,
 	Author = {Mu, Qiaozhen and Heinsch, Faith Ann and Zhao, Maosheng and Running, Steven W},
@@ -415,7 +390,6 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Volume = {111},
 	Year = {2007}}
 
-
 @article{nadezhdina2002radial,
 	Author = {Nadezhdina, N. and {\v{C}}erm{\'a}k, J. and Ceulemans, R.},
 	Journal = {Tree Physiology},
@@ -426,13 +400,11 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Volume = {22},
 	Year = {2002}}
 
-
 @article{oleson2010technical,
 	Author = {Oleson, KW and Lawrence, DM and Bonan, GB and Flanner, MG and Kluzek, E. and Lawrence, PJ and Levis, S. and Swenson, SC and Thornton, PE and Dai, A. and others},
 	Journal = {National Center for Atmospheric Research, Boulder, CO},
 	Title = {Technical description of version 4.0 of the {Community Land Model (CLM). NCAR Technical Note NCAR/TN-478+ STR}},
 	Year = {2010}}
-
 
 @article{oren1999survey,
 	Author = {Oren, R. and Sperry, JS and Katul, GG and Pataki, DE and Ewers, BE and Phillips, N. and Sch{\"a}fer, KVR},
@@ -444,9 +416,11 @@ GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M
 	Volume = {22},
 	Year = {1999}}
 
-\bibitem[{\textit{Oshun}(2012)}]{Oshun}
-Oshun, J., D. Rempe, P. Link, K.~A. Simonin, W.~E. Dietrich, T.~E. Dawson, and I. Fung (2012), A look deep inside a hillslope reveals a structured heterogeneity of isotopic reservoirs and distinct water use strategies for adjacent trees, \textit{AGU Fall Meeting Abstracts}, San Francisco, CA.
-
+@inproceedings{oshun2012,
+	Author={Oshun, J. and Rempe, D. and Link, P. and Simonin, K.~A. and Dietrich, W. and Dawson, T.~E. and Fung, I.},
+	Title={A look deep inside a hillslope reveals a structured heterogeneity of isotopic reservoirs and distinct water use strategies for adjacent trees},
+	Booktitle={{AGU Fall Meeting Abstracts}},
+	Year={2012}}
 
 @article{pataki2000sap,
 	Author = {Pataki, D.E. and Oren, R. and Smith, W.K.},
@@ -457,20 +431,29 @@ Oshun, J., D. Rempe, P. Link, K.~A. Simonin, W.~E. Dietrich, T.~E. Dawson, and I
 	Title = {Sap flux of co-occurring species in a western subalpine forest during seasonal soil drought},
 	Volume = {81},
 	Year = {2000}}
+	
+@article{patil,
+	Author={Patil, A. and Huard, D. and Fonnesbeck, C.~J.},
+	Journal={J. Stat. Software},
+	Number={35},
+	Issue={4},
+	Title={{PyMC: Bayesian stochastic modelling in python}},
+	Pages={1--81},
+	Year={2010}}
 
-\bibitem[{\textit{Patil et~al.}(2010)}]{Patil}
-Patil, A., D. Huard, and C.~J. Fonnesbeck (2010), PyMC: Bayesian stochastic modelling in python,
-\textit{J. Stat. Software}, \textit{35}(4), 1--81.
-
-\bibitem[{Raftery}]{Raftery}
-Raftery, A.~E., and S.~M. Lewis (1995), The number of iterations, convergence diagnostics, and generic metropolis algorithms, in \textit{Practical Markov Chain Monte Carlo}, W.~R. Gilks, D.~J. Spiegelhalter, and S. Richardson, eds.
-
-\bibitem[{\textit{Rempe et~al.}(2010)}]{Rempe}
-Rempe, D., J. Oshun, W. Dietrich, R. Salve, and I. Fung (2010), Controls on the weathering front
-depth on hillslopes underlain by mudstones and sandstones, \textit{AGU Fall Meeting Abstracts}, \textit{1},
-05.
-
-
+@incollection{raftery,
+	Author={Raftery, A.~E. and Lewis,  S.~M.},
+	Title={The number of iterations, convergence diagnostics, and generic metropolis algorithms},
+	Booktitle={{Practical Markov Chain Monte Carlo}},
+	Year={1995},
+	Editor={Gilks, W.~R. and Spiegelhalter, D.~J. and Richardson, S.}}
+	
+@inproceedings{rempe2010,
+	Author={Rempe, D. and Oshun, J. and Dietrich, W. and Salve, R. and Fung, I.},
+	Title={Controls on the weathering front depth on hillslopes underlain by mudstones and sandstones},
+	Booktitle={{AGU Fall Meeting Abstracts}},
+	Year={2010}}
+	
 @article{rodriguez2001intensive,
 	Author = {Rodriguez-Iturbe, I. and Porporato, A. and Laio, F. and Ridolfi, L.},
 	Journal = {Geophysical research letters},
@@ -479,7 +462,6 @@ depth on hillslopes underlain by mudstones and sandstones, \textit{AGU Fall Meet
 	Title = {Intensive or extensive use of soil moisture: plant strategies to cope with stochastic water availability},
 	Volume = {28},
 	Year = {2001}}
-
 
 @article{running1976environmental,
 	Author = {Running, S.W.},
@@ -491,7 +473,6 @@ depth on hillslopes underlain by mudstones and sandstones, \textit{AGU Fall Meet
 	Volume = {6},
 	Year = {1976}}
 
-
 @article{salve2012rain,
 	Author = {Salve, R. and Rempe, D.M. and Dietrich, W.E.},
 	Journal = {Water Resources Research},
@@ -502,11 +483,15 @@ depth on hillslopes underlain by mudstones and sandstones, \textit{AGU Fall Meet
 	Volume = {48},
 	Year = {2012}}
 
-
-\bibitem[{\textit{Schulze}(1985)}]{Schulze}
-Schulze, E. D., \v{C}erm\'{a}k, J., Matyssek, M., Penka, M., Zimmermann, R., Vasicek, F., Gries, W., and Ku\v{c}era, J. (1985), Canopy transpiration and water fluxes in the xylem of the trunk of Larix and Picea trees?a comparison of xylem flow, porometer and cuvette measurements, \textit{Oecologia}, \textit{66}(4), 475-483.
-
-
+@article{schulze,
+	Author={Schulze, E. D. and \v{C}erm\'{a}k, J. and Matyssek, M. and Penka, M. and Zimmermann, R. and Vasicek, F. and Gries, W. and Ku\v{c}era, J.},
+	Title={Canopy transpiration and water fluxes in the xylem of the trunk of \textit{Larix} and \textit{Picea} trees: a comparison of xylem flow, porometer and cuvette measurements},
+	Journal={Oecologia},
+	Volume={66},
+	Issue={4},
+	Pages={475-483},
+	Year={1985}}
+	
 @article{schwinning2010ecohydrology,
 	Author = {Schwinning, Susanne},
 	Journal = {Ecohydrology},
@@ -516,7 +501,6 @@ Schulze, E. D., \v{C}erm\'{a}k, J., Matyssek, M., Penka, M., Zimmermann, R., Vas
 	Title = {The ecohydrology of roots in rocks},
 	Volume = {3},
 	Year = {2010}}
-
 
 @article{schwinning2013we,
 	Author = {Schwinning, Susanne},
@@ -528,7 +512,6 @@ Schulze, E. D., \v{C}erm\'{a}k, J., Matyssek, M., Penka, M., Zimmermann, R., Vas
 	Volume = {362},
 	Year = {2013}}
 
-
 @article{smith1966variation,
 	Author = {Smith, JHG and Walters, J. and Wellwood, RW},
 	Journal = {Forest Science},
@@ -537,7 +520,6 @@ Schulze, E. D., \v{C}erm\'{a}k, J., Matyssek, M., Penka, M., Zimmermann, R., Vas
 	Title = {Variation in sapwood thickness of {Douglas-fir} in relation to tree and section characteristics},
 	Volume = {12},
 	Year = {1966}}
-
 
 @article{tan1976factors,
 	Author = {Tan, CS and Black, TA},
@@ -549,7 +531,6 @@ Schulze, E. D., \v{C}erm\'{a}k, J., Matyssek, M., Penka, M., Zimmermann, R., Vas
 	Volume = {10},
 	Year = {1976}}
 
-
 @article{teuling2010contrasting,
 	Author = {Teuling, A.J. and Seneviratne, S.I. and St{\"o}ckli, R. and Reichstein, M. and Moors, E. and Ciais, P. and Luyssaert, S. and Van Den Hurk, B. and Ammann, C. and Bernhofer, C. and others},
 	Journal = {Nature geoscience},
@@ -560,7 +541,6 @@ Schulze, E. D., \v{C}erm\'{a}k, J., Matyssek, M., Penka, M., Zimmermann, R., Vas
 	Volume = {3},
 	Year = {2010}}
 
-
 @article{topp1980electromagnetic,
 	Author = {Topp, GC and Davis, JL and Annan, A.P. and others},
 	Journal = {Water Resour. Res},
@@ -570,9 +550,8 @@ Schulze, E. D., \v{C}erm\'{a}k, J., Matyssek, M., Penka, M., Zimmermann, R., Vas
 	Volume = {16},
 	Year = {1980}}
 
-\bibitem[{\textit{USDA}(2005)}]{USDA}
-USDA (2005), CALVEG zones and alliances: vegetation descriptions.  \url{http://www.fs.usda.gov/Internet/FSE_DOCUMENTS/fsbdev3_046448.pdf}
-
+%\bibitem[{\textit{USDA}(2005)}]{USDA}
+%USDA (2005), CALVEG zones and alliances: vegetation descriptions.  \url{http://www.fs.usda.gov/Internet/FSE_DOCUMENTS/fsbdev3_046448.pdf}
 
 @article{vinukollu2010global,
 	Author = {Vinukollu, R.K. and Wood, E.F. and Ferguson, C.R. and Fisher, J.B.},
@@ -582,7 +561,6 @@ USDA (2005), CALVEG zones and alliances: vegetation descriptions.  \url{http://w
 	Title = {Global estimates of evapotranspiration for climate studies using multi-sensor remote sensing data: Evaluation of three process-based approaches},
 	Volume = {115},
 	Year = {2011}}
-
 
 @article{wang1995competitive,
 	Author = {Wang, Z.Q. and Newton, M. and Tappeiner, II and John, C.},
@@ -594,7 +572,6 @@ USDA (2005), CALVEG zones and alliances: vegetation descriptions.  \url{http://w
 	Volume = {41},
 	Year = {1995}}
 
-
 @article{waring2011generalizing,
 	Author = {Waring, RH and Landsberg, JJ},
 	Journal = {Journal of Plant Ecology},
@@ -605,7 +582,6 @@ USDA (2005), CALVEG zones and alliances: vegetation descriptions.  \url{http://w
 	Volume = {4},
 	Year = {2011}}
 
-
 @article{waring1978sapwood,
 	Author = {Waring, RH and Running, SW},
 	Journal = {Plant, Cell \& Environment},
@@ -615,7 +591,6 @@ USDA (2005), CALVEG zones and alliances: vegetation descriptions.  \url{http://w
 	Title = {Sapwood water storage: its contribution to transpiration and effect upon water conductance through the stems of old-growth {Douglas-fir}},
 	Volume = {1},
 	Year = {1978}}
-
 
 @article{Warren:2007ly,
 	Author = {Warren, Jeffrey M. and Meinzer, Frederick C. and Brooks, J. Renee and Domec, Jean-Christophe and Coulombe, Rob},
@@ -629,9 +604,8 @@ USDA (2005), CALVEG zones and alliances: vegetation descriptions.  \url{http://w
 	Volume = {173},
 	Year = {2007}}
 
-\bibitem[{Williams}]{Williams}
-Williams, C., M. Menne, and J. Lawrimore (2012), Modifications to Pairwise Homogeneity Adjustment software to address coding errors and improve run-time efficiency, NCDC Technical Report NCDC No. GHCNM-12-02, National Climatic Data Center, 28 pp.
-
+%\bibitem[{Williams}]{Williams}
+%Williams, C., M. Menne, and J. Lawrimore (2012), Modifications to Pairwise Homogeneity Adjustment software to address coding errors and improve run-time efficiency, NCDC Technical Report NCDC No. GHCNM-12-02, National Climatic Data Center, 28 pp.
 
 @article{wilson2002energy,
 	Author = {Wilson, Kell B and Baldocchi, Dennis D and Aubinet, Marc and Berbigier, Paul and Bernhofer, Christian and Dolman, Han and Falge, Eva and Field, Chris and Goldstein, Allen and Granier, Andre and others},
@@ -643,9 +617,8 @@ Williams, C., M. Menne, and J. Lawrimore (2012), Modifications to Pairwise Homog
 	Volume = {38},
 	Year = {2002}}
 
-\bibitem[{\textit{Woudenberg}(2010)}]{Woudenberg}
-Woudenberg, S.~W., B.~L. Conkling, B.~M. O'Connell, E.~B. LaPoint, J.~A. Turner, and K.~L. Waddell (2010), The Forest Inventory and Analysis Database: Database description and users manual version 4.0 for Phase 2, Gen. Tech. Rep. RMRS-GTR- 245. Fort Collins, CO: U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station. 336 p.
-
+%\bibitem[{\textit{Woudenberg}(2010)}]{Woudenberg}
+%Woudenberg, S.~W., B.~L. Conkling, B.~M. O'Connell, E.~B. LaPoint, J.~A. Turner, and K.~L. Waddell (2010), The Forest Inventory and Analysis Database: Database description and users manual version 4.0 for Phase 2, Gen. Tech. Rep. RMRS-GTR- 245. Fort Collins, CO: U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station. 336 p.
 
 @article{wullschleger2001transpiration,
 	Author = {Wullschleger, Stan D and Hanson, PJ and Todd, DE},
@@ -657,14 +630,21 @@ Woudenberg, S.~W., B.~L. Conkling, B.~M. O'Connell, E.~B. LaPoint, J.~A. Turner,
 	Volume = {143},
 	Year = {2001}}
 
-\bibitem[{\textit{Zwieniecki}(1995)}]{Zwieniecki}
-Zwieniecki, M.~A., and M. Newton (1995), Roots growing in rock fissures: Their morphological adaptation, 
-\textit{Plant and Soil}, \textit{172}, 181--187.
+@article{zwien95,
+	Author = {Zwieniecki, M.~A. and Newton, M.},
+	Journal = {Plant and Soil},
+	Volume = {172},
+	Pages = {181--187},
+	Title = {Roots growing in rock fissures: Their morphological adaptation},
+	Year = {1995}}
 
-\bibitem[{\textit{Zwieniecki}(1996)}]{Zwieniecki2}
-Zwieniecki, M.~A., and M. Newton (1996), Seasonal pattern of water depletion from soil--rock profiles in a Mediterranean climate in southwestern Oregon, 
-\textit{Can. J. For. Res.}, \textit{26}, 1346--1352.
-
+@article{zwien96,
+	Author = {Zwieniecki, M.~A. and Newton, M.},
+	Journal = {Can. J. For. Res.},
+	Volume = {26},
+	Pages = {1346--1352},
+	Title = {Seasonal pattern of water depletion from soil--rock profiles in a {Mediterranean} climate in southwestern {Oregon}},
+	Year = {1996}}
 
 
 %%%%%%%% WIND CHAPTER %%%%%%%%
