--- a/ch1-sapflow/intro/intro.tex
+++ b/ch1-sapflow/intro/intro.tex
@@ -1,11 +1,11 @@
 \section{Introduction}
-In forested regions, the response of trees to solar irradiance, temperature, humidity, and subsurface moisture influences the timing of water flux to the atmosphere, of energy partitioning at the land surface, and of fixation of carbon [\textit{Bonan}, 2008]. In a Mediterranean climate, the season of high water supply is offset from the season of high atmospheric evaporative demand and high solar irradiance [\textit{Baldocchi and Xu}, 2007]. For forested landscapes in these climates, such as much of the Northern California Coast Range, the dominant tree species are evergreen [\textit{Woudenberg et al.}, 2010], yet their transpiration is not constant through the year [e.g. \textit{Vinukollu et al.}, 2011].  In this study, we demonstrate differences in transpiration seasonality between needleleaf and broadleaf evergreen trees, and we show that these differences are due to different responses to surface soil moisture and atmospheric evaporative demand.
+In forested regions, the response of trees to solar irradiance, temperature, humidity, and subsurface moisture influences the timing of water flux to the atmosphere, of energy partitioning at the land surface, and of fixation of carbon [\cite{bonan}]. In a Mediterranean climate, the season of high water supply is offset from the season of high atmospheric evaporative demand and high solar irradiance [\cite{baldocchi2007limits}]. For forested landscapes in these climates, such as much of the Northern California Coast Range, the dominant tree species are evergreen [XXXX\textit{Woudenberg et al.}, 2010], yet their transpiration is not constant through the year [e.g. \cite{vinukollu2010global}].  In this study, we demonstrate differences in transpiration seasonality between needleleaf and broadleaf evergreen trees, and we show that these differences are due to different responses to surface soil moisture and atmospheric evaporative demand.
 
-Water supply limitation can reduce evapotranspiration (ET) from the whole-plant scale (specific references are discussed below) up to the regional scale [\textit{Jung et al.}, 2010].  The root-zone moisture value at which different species become water-stressed can determine which species thrive in different hydrologic regimes [\textit{Rodriguez-Iturbe et al.}, 2001; \textit{Kumagai and Porporato}, 2012].  Some species, such as Douglas-fir [\textit{Granier}, 1987; \textit{Tan and Black}, 1976; \textit{Black}, 1979; \textit{Humphreys et al.}, 2003; \textit{Jassal et al.}, 2009], juniper [\textit{McDowell et al.}, 2008], lodgepole pine, limber pine, and subalpine fir [\textit{Pataki et al.}, 2000], Aleppo pine [\textit{Baquedano and Castillo}, 2006; \textit{Chirino et al.} 2011], and many species in the \textit{Pinaceae} family [\textit{Mart\'inez-Vilalta et al.}, 2004] reduce transpiration in response to relatively moderate soil water deficits.  This drought response strategy may protect the trees from hydraulic failure but reduce carbon uptake [\textit{McDowell et al.}, 2008].  In contrast, some species maintain high rates of transpiration even as the subsurface dries (e.g. pi\~non [\textit{McDowell et al.}, 2008], Kermes oak and Holm oak [\textit{Baquedano and Castillo}, 2006; \textit{Chirino et al.}, 2011; \textit{David et al.}, 2007], and a eucalyptus species (\textit{E. gomphocephala}) [\textit{Franks et al.}, 2007]); this drought response strategy may expose the trees to hydraulic failure if the drought is severe enough but allow them to continue fixing carbon [\textit{McDowell et al.}, 2008]. 
+Water supply limitation can reduce evapotranspiration (ET) from the whole-plant scale (specific references are discussed below) up to the regional scale [\cite{jung2010recent}].  The root-zone moisture value at which different species become water-stressed can determine which species thrive in different hydrologic regimes [\cite{rodriguez2001intensive}; \cite{kumagai2012strategies}].  Some species, such as Douglas-fir [\cite{granier1987evaluation}; \cite{tan1976factors}; \cite{black1979evapotranspiration}; \cite{humphreys2003annual}; \cite{jassal2009evapotranspiration}], juniper [\cite{mcdowell2008mechanisms}], lodgepole pine, limber pine, and subalpine fir [\cite{pataki2000sap}], Aleppo pine [\cite{baquedano2006comparative}; \cite{chirino2011daily}], and many species in the \textit{Pinaceae} family [\cite{martinez2004hydraulic}] reduce transpiration in response to relatively moderate soil water deficits.  This drought response strategy may protect the trees from hydraulic failure but reduce carbon uptake [\cite{mcdowell2008mechanisms}].  In contrast, some species maintain high rates of transpiration even as the subsurface dries (e.g. pi\~non [\cite{mcdowell2008mechanisms}], Kermes oak and Holm oak [\cite{baquedano2006comparative}; \cite{chirino2011daily}; \cite{david2007water}], and a eucalyptus species (\textit{E. gomphocephala}) [\cite{franks2007anisohydric}]); this drought response strategy may expose the trees to hydraulic failure if the drought is severe enough but allow them to continue fixing carbon [\cite{mcdowell2008mechanisms}]. 
 
-Transpiration also depends on the rate of stomatal closure in response to increasing atmospheric evaporative demand, and tree species differ in this response.  Maximum stomatal conductance correlates with stomatal sensitivity to vapor pressure deficit (\textit{VPD}, kPa) [\textit{Oren et al.}, 1999].  This means that a species with high stomatal conductance at low and moderate \textit{VPD} (e.g. 1 kPa) also rapidly closes its stomata as \textit{VPD} increases, limiting the increase of transpiration at higher atmospheric evaporative demand.  In contrast, other species that have low maximum stomatal conductance, and thus lower transpiration at low \textit{VPD}, also have less stomatal closure with increasing \textit{VPD}.  In the Pacific northwestern U.S., two common conifers (\textit{Pseudotsuga menziesii} and \textit{Tsuga heterophylla} [\textit{Marshall and Waring}, 1984; \textit{Bond and Kavanagh}, 1999]) close their stomata more rapidly in response to increasing \textit{VPD} than do certain co-occurring broadleaf species (\textit{Acer circinatum} Pursh, \textit{Berberis nervosa} Pursh, \textit{Ceanothus velutinus} Dougl. ex Hook., \textit{Gaultheria shallon} Pursh, \textit{Rhododendron macrophyllum} G. Don, \textit{Castanopsis chrysophylla} (Dougl.) A.D.C., and \textit{Cornus nuttallii} Aud. ex T. \& G. [\textit{Marshall and Waring}, 1984]; \textit{Populus trichocarpa} Torr. \& Gray. and \textit{Alnus rubra} Bong. [\textit{Bond and Kavanagh}, 1999]).  Other cases of species differences in response to atmospheric evaporative demand have also been documented [\textit{Aranda et al.}, 2000; \textit{Mart\'inez-Vilalta et al.}, 2003].  Such differences in the relationship between stomatal conductance and atmospheric evaporative demand are not captured in common land surface models such as CLM [\textit{Oleson et al.}, 2010], which applies a simple linear relationship between relative humidity and stomatal conductance for all plant functional types.
+Transpiration also depends on the rate of stomatal closure in response to increasing atmospheric evaporative demand, and tree species differ in this response.  Maximum stomatal conductance correlates with stomatal sensitivity to vapor pressure deficit (\textit{VPD}, kPa) [\cite{oren1999survey}].  This means that a species with high stomatal conductance at low and moderate \textit{VPD} (e.g. 1 kPa) also rapidly closes its stomata as \textit{VPD} increases, limiting the increase of transpiration at higher atmospheric evaporative demand.  In contrast, other species that have low maximum stomatal conductance, and thus lower transpiration at low \textit{VPD}, also have less stomatal closure with increasing \textit{VPD}.  In the Pacific northwestern U.S., two common conifers (\textit{Pseudotsuga menziesii} and \textit{Tsuga heterophylla} [\cite{marshall1984conifers}; \cite{bond1999stomatal}]) close their stomata more rapidly in response to increasing \textit{VPD} than do certain co-occurring broadleaf species (\textit{Acer circinatum} Pursh, \textit{Berberis nervosa} Pursh, \textit{Ceanothus velutinus} Dougl. ex Hook., \textit{Gaultheria shallon} Pursh, \textit{Rhododendron macrophyllum} G. Don, \textit{Castanopsis chrysophylla} (Dougl.) A.D.C., and \textit{Cornus nuttallii} Aud. ex T. \& G. [\cite{marshall1984conifers}]; \textit{Populus trichocarpa} Torr. \& Gray. and \textit{Alnus rubra} Bong. [\cite{bond1999stomatal}]).  Other cases of species differences in response to atmospheric evaporative demand have also been documented [\cite{aranda2000water}; \cite{martinez2003sap}].  Such differences in the relationship between stomatal conductance and atmospheric evaporative demand are not captured in common land surface models such as CLM [\cite{oleson2010technical}], which applies a simple linear relationship between relative humidity and stomatal conductance for all plant functional types.
 
-The seasonality of transpiration is known to vary between climatic and ecosystem types.  Tropical forest ET has relatively little seasonality, while deciduous forests' ET seasonality is largely determined by leaf phenology, savanna woodlands' ET peaks in the spring after the soil has been moistened by winter rains, and evergreen midlatitude forests' ET tends to follow the seasonal cycle of solar radiation [\textit{Baldocchi and Ryu}, 2011, and references therein].  There is a large range among Mediterranean ecosystems in warm-season partitioning between latent and sensible heat, and there is large between-year variation in this partitioning in evergreen conifer ecosystems [\textit{Wilson et al.}, 2002].  The Northern California Coast Range forest has a Mediterranean climate but also is composed of evergreen species.  We seek to understand whether the seasonality of transpiration in this system resembles more closely the Mediterranean savanna, peaking in spring, or the midlatitude evergreen forest, peaking in summer.
+The seasonality of transpiration is known to vary between climatic and ecosystem types.  Tropical forest ET has relatively little seasonality, while deciduous forests' ET seasonality is largely determined by leaf phenology, savanna woodlands' ET peaks in the spring after the soil has been moistened by winter rains, and evergreen midlatitude forests' ET tends to follow the seasonal cycle of solar radiation [\cite{baldocchi2011synthesis}, and references therein].  There is a large range among Mediterranean ecosystems in warm-season partitioning between latent and sensible heat, and there is large between-year variation in this partitioning in evergreen conifer ecosystems [\cite{wilson2002energy}].  The Northern California Coast Range forest has a Mediterranean climate but also is composed of evergreen species.  We seek to understand whether the seasonality of transpiration in this system resembles more closely the Mediterranean savanna, peaking in spring, or the midlatitude evergreen forest, peaking in summer.
 
 In this paper, we investigate the seasonality of transpiration of five common evergreen tree species in a Mediterranean climate, and the dependence of transpiration on root zone water supply and atmospheric evaporative demand. We use intensive half-hourly observations of sap flow, meteorological conditions, and soil moisture to:
 \begin{enumerate}
